objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>This is Job object.</description>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>