objects/Job__c/fields/acf_Next_Task_Due_1202640634277168__c.field-meta.xml
<CustomField>
    <fullName>acf_Next_Task_Due_1202640634277168__c</fullName>
    <formula>IF(Next_Tasks_Due__c  &lt;&gt; &apos;&apos; , Next_Tasks_Due__c  , &apos;No Tasks Due&apos;)</formula>
    <label>acf Next Task Due</label>
    <type>Text</type>
</CustomField>