objects/Job__c/fields/Approve_PE__c.field-meta.xml
<CustomField>
    <fullName>Approve_PE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to Approve all Production Estimate Line Items when job status is completed</description>
    <label>Approve PE</label>
    <type>Checkbox</type>
</CustomField>