objects/Job__c/fields/Assana_ExtenalId__c.field-meta.xml
<CustomField>
    <fullName>Assana_ExtenalId__c</fullName>
    <label>Assana ExtenalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>