objects/Job__c/fields/BU_multi__c.field-meta.xml
<CustomField>
    <fullName>BU_multi__c</fullName>
    <label>Business Unit - Job</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>