objects/Job__c/fields/Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is budgeted cost field. This field contains the budget amount for the current Job.</description>
    <label>Budgeted Job Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>