objects/Job__c/fields/Campaign_Template__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Template__c</fullName>
    <description>Campaign Template Id Store in the Job to avoid duplicate jobs insertion under the campaign when we are importing the campaign template.</description>
    <label>Campaign Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>