objects/Job__c/fields/Completed_Month__c.field-meta.xml
<CustomField>
    <fullName>Completed_Month__c</fullName>
    <formula>TExT(MONTH( Completion_Date__c ))</formula>
    <label>Completed Month</label>
    <type>Text</type>
</CustomField>