objects/Job__c/fields/Completed_Year__c.field-meta.xml
<CustomField>
    <fullName>Completed_Year__c</fullName>
    <formula>TEXT(YEAR(Completion_Date__c))</formula>
    <label>Completed Year</label>
    <type>Text</type>
</CustomField>