objects/Job__c/fields/Creative_Overview__c.field-meta.xml
<CustomField>
    <fullName>Creative_Overview__c</fullName>
    <label>Status Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>