objects/Job__c/fields/Current_Status_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Task_Name__c</fullName>
    <label>Current Status Task Name</label>
    <summarizedField>Job_Task__c.Current_Status_Task_Order__c</summarizedField>
    <summaryFilterItems>
        <field>Job_Task__c.Current_Status_Task_Order__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Task__c.Job__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>