objects/Job__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>