objects/Job__c/fields/DesignerEmail__c.field-meta.xml
<CustomField>
    <fullName>DesignerEmail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DesignerEmail</label>
    <referenceTo>Job_Team__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>