objects/Job__c/fields/Difference_PO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Difference_PO_Invoice__c</fullName>
    <description>Difference between Estimated Amount and Invoice Amount(Actual).</description>
    <formula>Estimate_Total__c   -  Invoice_Actual_Amounts__c</formula>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>