objects/Job__c/fields/Dummy_Date_6__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_6__c</fullName>
    <description>This is dummy date field 6. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Date 6</label>
    <type>Date</type>
</CustomField>