objects/Job__c/fields/Dummy_Text_4__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_4__c</fullName>
    <description>This is dummy text field 4. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Text 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>