objects/Job__c/fields/Estimate_Total__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>