objects/Job__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is flag field to check import process.</description>
    <label>Flag</label>
    <type>Checkbox</type>
</CustomField>