objects/Job__c/fields/Invoice_Actual_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Actual_Amounts__c</fullName>
    <label>Invoices</label>
    <summarizedField>Invoice__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>