objects/Job__c/fields/Job_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Auto_Number__c</fullName>
    <defaultValue>&quot;Auto Fill&quot;</defaultValue>
    <externalId>true</externalId>
    <label>Job #</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>