objects/Job__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <formula>RIGHT( TEXT(YEAR( TODAY())),2 ) +&apos;-&apos;+
IF(JS_Client__r.Client_Code__c !=null, JS_Client__r.Client_Code__c+&apos;-&apos;, &apos;&apos;)  
  + 
 Job_Auto_Number__c</formula>
    <label>Job Code</label>
    <type>Text</type>
</CustomField>