objects/Job__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Not in Use Now.</description>
    <label>Job Auto Number</label>
    <type>AutoNumber</type>
</CustomField>