objects/Job__c/fields/Job_Timing_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Timing_Status__c</fullName>
    <label>Timing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>