objects/Job__c/fields/JobFormTypeValues__c.field-meta.xml
<CustomField>
    <fullName>JobFormTypeValues__c</fullName>
    <label>JobFormTypeValues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Tag Request</fullName>
            </value>
            <value>
                <fullName>Store Business Card</fullName>
            </value>
            <value>
                <fullName>Corporate Business Card</fullName>
            </value>
            <value>
                <fullName>Billboard Repair Request</fullName>
            </value>
            <value>
                <fullName>Store Supply Orders</fullName>
            </value>
            <value>
                <fullName>Corporate Office Nameplate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>