objects/Job__c/fields/Jobidbackend__c.field-meta.xml
<CustomField>
    <fullName>Jobidbackend__c</fullName>
    <label>Jobidbackend</label>
    <length>50</length>
    <type>Text</type>
</CustomField>