objects/Job__c/fields/JobLate__c.field-meta.xml
<CustomField>
    <fullName>JobLate__c</fullName>
    <description>If Due Date minus Competion Date is greater than 0 then the project is late, otherwise it is on time.</description>
    <formula>IF( Days_Late__c &gt; 0, &quot;Late&quot;, &quot;On Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Late</label>
    <type>Text</type>
</CustomField>