objects/Job__c/fields/JS_Client__c.field-meta.xml
<CustomField>
    <fullName>JS_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Job is associated with Client object.</description>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>