objects/Job__c/fields/JS_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>JS_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Job is associated with Client Contact object.</description>
    <label>Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Client_Contact__c.Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.JS_Client__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Contact__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>