objects/Job__c/fields/Labor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Labor_Resource__c</fullName>
    <label>Labor Resource</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tom ($25)</fullName>
            </value>
            <value>
                <fullName>Doug ($17</fullName>
            </value>
            <value>
                <fullName>Ed ($18)</fullName>
            </value>
            <value>
                <fullName>Sam ($22)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>