objects/Job__c/fields/marked_Done__c.field-meta.xml
<CustomField>
    <fullName>marked_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to marked done all tasks when job status is completed</description>
    <label>marked Done</label>
    <type>Checkbox</type>
</CustomField>