objects/Job__c/fields/Media_Types__c.field-meta.xml
<CustomField>
    <fullName>Media_Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Type</label>
    <referenceTo>Media_Type__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>