objects/Job__c/fields/Next_Tasks_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Tasks_Due__c</fullName>
    <label>Next Job Task Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>