objects/Job__c/fields/PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount__c</fullName>
    <label>PO&apos;s</label>
    <summarizedField>Purchase_Order__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Purchase_Order__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>