objects/Job__c/fields/Reprint__c.field-meta.xml
<CustomField>
    <fullName>Reprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprint</label>
    <type>Checkbox</type>
</CustomField>