objects/Job__c/fields/Rev__c.field-meta.xml
<CustomField>
    <fullName>Rev__c</fullName>
    <formula>Jobidbackend__c +&apos;.&apos;+  IF(LEN(Text(RRbackend__c))==1, &apos;0&apos;+&apos;&apos;+(Text(RRbackend__c)), (Text(RRbackend__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev #</label>
    <type>Text</type>
</CustomField>