objects/Job__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revision</label>
    <type>Checkbox</type>
</CustomField>