objects/Job__c/fields/Revision_Increment__c.field-meta.xml
<CustomField>
    <fullName>Revision_Increment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revision Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>