objects/Job__c/fields/RRbackend__c.field-meta.xml
<CustomField>
    <fullName>RRbackend__c</fullName>
    <label>RRbackend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>