objects/Job__c/fields/Schedule_Calc__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Calc__c</fullName>
    <label>Schedule  Calc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start Date</fullName>
                <default>true</default>
                <label>Start Date</label>
            </value>
            <value>
                <fullName>End Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>