objects/Job__c/fields/Specification_Template__c.field-meta.xml
<CustomField>
    <fullName>Specification_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Brief Template</label>
    <referenceTo>Specification_Template__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>