objects/Job__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <description>Status Notes</description>
    <label>Creative Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>