objects/Job__c/fields/Task_Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Days_Completed__c</fullName>
    <label>Tasks Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>