objects/Job__c/fields/TeamEmail__c.field-meta.xml
<CustomField>
    <fullName>TeamEmail__c</fullName>
    <label>TeamEmail</label>
    <type>Email</type>
</CustomField>