objects/Job__c/fields/Traffic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Notes__c</fullName>
    <description>Traffic Notes</description>
    <label>Traffic Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>