objects/Job__c/fields/UpdateSchedDateFieldCheck__c.field-meta.xml
<CustomField>
    <fullName>UpdateSchedDateFieldCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in trigger to control the updation of Scheduled dates.</description>
    <label>Recalculate Schedule</label>
    <type>Checkbox</type>
</CustomField>