objects/Job__c/validationRules/Job_Completion_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Job_Completion_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c,&quot;Completed&quot;)),NOT(ISBLANK(Completion_Date__c)))</errorConditionFormula>
    <errorMessage>Job is not yet completed</errorMessage>
</ValidationRule>