objects/Job__c/validationRules/Start_Date_must_be_less_than_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_less_than_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c    &gt;  Due_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be greater than Start Date</errorMessage>
</ValidationRule>