objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Dummy_Picklist_1__c</columns>
    <columns>JS_Client__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>