objects/Job__c/listViews/Job_Status_is_Completed.listView-meta.xml
<ListView>
    <fullName>Job_Status_is_Completed</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>JS_Client__c</columns>
    <columns>Campaign__c</columns>
    <columns>Media_Types__c</columns>
    <columns>Schedule_Template__c</columns>
    <columns>Specification_Template__c</columns>
    <columns>Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Job Status is Completed</label>
</ListView>