objects/Job__c/listViews/Job_Status_is_Requested.listView-meta.xml
<ListView>
    <fullName>Job_Status_is_Requested</fullName>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>JS_Client__c</columns>
    <columns>Campaign__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Job Status is Requested</label>
</ListView>