objects/Job__c/listViews/Requested_Jobs.listView-meta.xml
<ListView>
    <fullName>Requested_Jobs</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>Job_Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>JS_Client__c</columns>
    <columns>Schedule_Template__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Requested Jobs</label>
    <language>en_US</language>
</ListView>